--- a/src/App.css
+++ b/src/App.css
@@ -9,20 +9,37 @@ html, body {
     background-color: #F0EDE5;
 }
 
-.logoImage {
+#logoImage {
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 200px;
+    height: 10rem;
 }
 
-.navLinks {
+.navlinks{
     display: flex;
-
+    justify-content: space-evenly;
 }
 
-.navLinks li {
+.link {
     text-decoration: none;
-    list-style: none;
-    margin: 0px 5px;
+    list-style-type: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* 
+.menudiv {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+} */
