--- a/src/App.css
+++ b/src/App.css
@@ -61,22 +61,73 @@ html, body {
 }
 .homePage {
     font-family: 'Petit Formal Script';
-   
-}
-.homePage h1{
-    /* padding: .25em 1.5em; */
+    display: flex;
+    flex-direction: column;
+
 }
 
-.homePage h2{
-    /* padding: .25em 2.5em; */
+.aboutUsContainer {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(auto-fill, 100px) 300px;
+    margin: 1em;
 }
+.aboutUsContainer h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1/5;
+    grid-row: 1/2;
+}
+.img1 {
+    border: 5px solid #1D3354;
+    margin: .5em;
+    height: 100%;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 2/3;
+}
+.img2 {
+    border: 5px solid #1D3354;
+     margin: .5em;
+    height: 100%;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.img3 {
+    border: 5px solid #1D3354;
+    margin: .5em;
+    height: 100%;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 4/5;
+}
+.img4 {
+    border: 5px solid #1D3354;
+     margin: .5em;
+    height: 100%;
+    width: 100%;
+    grid-column: 1/2;
+    grid-row: 5/6;
+}
+.aboutUsContainer span{
+    margin-top: 2em;
+    grid-column: 1/2;
+    grid-row: 6/7;
+    height: 100%;
+    width: 100%;
+}
+
+
+
 .homePageText{
     color:#1D3354;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: cente3r;
 }
-.homePageText button{
+.button{
     display: flex;
     justify-content: center;
     background-color: #841C26;
@@ -85,11 +136,12 @@ html, body {
     height: 3em;
     align-items: center;
 }
-.homePageText button a{
+.button a{
     color: #F0EDE5;
     text-decoration: none;
 }
-.footer {
+
+/* .footer {
     display: flex;
     justify-content: center;
     position: absolute;
@@ -99,7 +151,7 @@ html, body {
 .footer a{
     color:#1D3354;
     text-decoration: none;
-}
+} */
 
 /* 
 .menudiv {
