--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ html, body {
 } 
 
 .header{
+    font-family: 'Petit Formal Script';
+    font-size: 1em;
+    font-weight: bolder;
     display: flex;
     justify-content: space-around;
     padding: 1em;
@@ -63,9 +66,7 @@ html, body {
     font-family: 'Petit Formal Script';
     display: flex;
     flex-direction: column;
-
 }
-
 .aboutUsContainer {
     display: grid;
     grid-template-columns: 1fr;
@@ -119,13 +120,16 @@ html, body {
     width: 100%;
 }
 
-
-
 .homePageText{
     color:#1D3354;
     display: flex;
-    justify-content: space-evenly;
-    align-items: cente3r;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2em 1em;
+}
+.homePageText h2 {
+    padding: 1em;
 }
 .button{
     display: flex;
@@ -135,27 +139,45 @@ html, body {
     width: 15em;
     height: 3em;
     align-items: center;
+    margin: auto;
+    padding: 2em;
 }
 .button a{
     color: #F0EDE5;
     text-decoration: none;
 }
 
-/* .footer {
+.footer {
     display: flex;
     justify-content: center;
-    position: absolute;
     bottom: 0;
-
+    margin-top: 2em;
 }
 .footer a{
     color:#1D3354;
+    padding: 0 2rem;
     text-decoration: none;
-} */
+}
 
-/* 
+.menuTitle{
+    font-family: 'Petit Formal Script';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    color: #1D3354;
+}
 .menudiv {
+    color: #1D3354;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-} */
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+
+.title {
+    font-family: 'Petit Formal Script';
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: .75em;
+}
