--- a/src/App.css
+++ b/src/App.css
@@ -64,56 +64,51 @@ html, body {
     flex-direction: column;
 }
 .aboutUsContainer {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(auto-fill, 100px) 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 1em;
 }
 .aboutUsContainer h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    grid-column: 1/5;
-    grid-row: 1/2;
 }
 .img1 {
     border: 5px solid #1D3354;
     margin: .5em;
     height: 100%;
     width: 100%;
-    grid-column: 1/2;
-    grid-row: 2/3;
 }
 .img2 {
     border: 5px solid #1D3354;
-     margin: .5em;
+    margin: .5em;
     height: 100%;
     width: 100%;
-    grid-column: 1/2;
-    grid-row: 3/4;
 }
 .img3 {
     border: 5px solid #1D3354;
     margin: .5em;
     height: 100%;
     width: 100%;
-    grid-column: 1/2;
-    grid-row: 4/5;
+ 
 }
 .img4 {
     border: 5px solid #1D3354;
      margin: .5em;
     height: 100%;
     width: 100%;
-    grid-column: 1/2;
-    grid-row: 5/6;
+    
+}
+.img5 {
+    border: 5px solid #1D3354;
+     margin: .5em;
+    height: 100%;
+    width: 100%; 
 }
 .aboutUsContainer span{
-    margin-top: 2em;
-    grid-column: 1/2;
-    grid-row: 6/7;
-    height: 100%;
-    width: 100%;
+    margin: .5em;
+  
 }
 
 .homePageText{
